proper configuration defaults